got table from csv file to finally show so that data can be uploaded and manipulated

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
 		<title>Electric Output Information</title>
 	</head>
 	<body>
+		<script src="https://cdn.jsdelivr.net/npm/danfojs@0.2.5/lib/bundle.min.js"></script>
+		<script lang="javascript" src="dist/xlsx.full.min.js"></script>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 	</body>
